--- a/WebContent/pages/subject_function.html
+++ b/WebContent/pages/subject_function.html
@@ -8,6 +8,7 @@
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
 <link type="text/css" rel="stylesheet" href="../css/tree.css" />
+<link type="text/css" rel="stylesheet" href="../css/highlight.css" />
 
 <script type="text/javascript" src="../js/title.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
@@ -33,10 +34,13 @@
   
   <h2>窗口函数</h2>
   <pre class="code">
+    <code>
 function_name (argument_list)
   over (partition_clause 
     order_by_clause
-    windowing_clause)</pre>
+    windowing_clause)
+    </code>
+  </pre>
   <div class="ext">
     partition_clause: 可选分区子句<br/>
     order_by: 可选排序子句<br/>
@@ -50,12 +54,15 @@ function_name (argument_list)
     </ul>
   </div>
   <pre class="code">
+    <code>
 select sale_person,
   sum(sale_amount) as person_amount,
   sum(sum(sale_amount)) over (order by sale_person rows between unbounded prededing and current row) 
 from sales_fact
 group by sale_person
-order by sale_person;</pre>
+order by sale_person;
+    </code>
+  </pre>
   <p>在执行累加等分析查询时，可以在 select 语句中使用 where 子句指定条件，表示只有满足 where 子句指定的条件的数据才可以参加分析查询。</p>
   <p>除了计算累计值之外，窗口函数还可以计算移动平均值。</p>
 
@@ -69,7 +76,11 @@ order by sale_person;</pre>
     </ol>
   </div>
   
-  <div class="code">function_name(argument_list) over (patition_clause)</div>
+  <pre class="code">
+    <code>
+function_name(argument_list) over (patition_clause)
+    </code>
+  </pre>
   
   <h2>检索当前行的周围行</h2>
   <ul class="none">
@@ -84,16 +95,21 @@ order by sale_person;</pre>
   </ul>
   
   <h2>等级函数</h2>
-  <div class="code">
-    function_name (argument_list) over (partition_clause order_by_clause)
-  </div>
+  <pre class="code">
+    <code>
+function_name (argument_list) over (partition_clause order_by_clause)
+    </code>
+  </pre>
   <p>等级函数的结果与排序子句密切关联。</p>
   <pre class="code">
+    <code>
 select sale_region, 
   sum(sale_amount),
   rank() over (order by sum(sale_amount) desc) as rank_amount
 from sales_fact
 group by sale_region
-order by sale_region;</pre>
+order by sale_region;
+    </code>
+  </pre>
 </body>
 </html>
