--- a/WebContent/pages/object_dblink.html
+++ b/WebContent/pages/object_dblink.html
@@ -7,6 +7,8 @@
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
+<link type="text/css" rel="stylesheet" href="../css/tree.css" />
+<link type="text/css" rel="stylesheet" href="../css/highlight.css" />
 
 <script type="text/javascript" src="../js/title.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
@@ -15,9 +17,12 @@
 <body>
   <h1>创建</h1>
   <pre class="code">
-create database link &lt;NAME>
-  connect to MESWELL
-  using '(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = &lt;HOST_IP>)(PORT = &lt;PORT>))
-  (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = &lt;SERVICE_NAME>)))';</pre>
+    <code>
+create database link &lt;link_name>
+  connect to &lt;user_name>
+  using '(description = (address = (protocol = tcp)(host = &lt;host_ip>)(port = &lt;port>))
+  (connect_data = (server = dedicated) (service_name = &lt;service_name>)))';
+    </code>
+  </pre>
 </body>
 </html>
