--- a/WebContent/pages/object_index.html
+++ b/WebContent/pages/object_index.html
@@ -7,6 +7,8 @@
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
+<link type="text/css" rel="stylesheet" href="../css/tree.css" />
+<link type="text/css" rel="stylesheet" href="../css/highlight.css" />
 
 <script type="text/javascript" src="../js/title.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
@@ -15,18 +17,24 @@
 <body>
   <h1>修改</h1>
   <pre class="code">
-<span class="comment">--重建表索引</span>
-ALTER INDEX &lt;INDEX_NAME> REBUILD;
+    <code>
+--重建表索引
+alter index &lt;index_name> rebuild;
 
-<span class="comment">--将索引移动到指定的表空间</span>
-ALTER INDEX INDEX_NAME REBUILD TABLESPACE &lt;TABLESPACE_NAME>;
+--将索引移动到指定的表空间
+alter index index_name rebuild tablespace &lt;tablespace_name>;
 
-<span class="comment">--移动LOB型索引表空间</span>
-ALTER TABLE &lt;TABLE_NAME> MOVE LOB(&lt;COLUMN_NAME>) STORE AS (TABLESPACE &lt;TABLESPACE_NAME>);</pre>
+--移动LOB型索引表空间
+alter table &lt;table_name> move lob(&lt;column_name>) store as (tablespace &lt;tablespace_name>);
+    </code>
+  </pre>
 
   <h1>删除</h1>
   <pre class="code">
-PURGE INDEX &lt;INDEX_NAME>;</pre>
+    <code>
+purge index &lt;index_name>;
+    </code>
+  </pre>
 
 </body>
 </html>
