--- a/WebContent/pages/object_job.html
+++ b/WebContent/pages/object_job.html
@@ -7,6 +7,8 @@
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
+<link type="text/css" rel="stylesheet" href="../css/tree.css" />
+<link type="text/css" rel="stylesheet" href="../css/highlight.css" />
 
 <script type="text/javascript" src="../js/title.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
@@ -15,20 +17,32 @@
 <body>
   <h1>运行</h1>
   <pre class="code">
-dbms_scheduler.run_job([name=>]&lt;JOB_NAME>);</pre>
+    <code>
+dbms_scheduler.run_job([name=>]&lt;JOB_NAME>);
+    </code>
+  </pre>
 
   <h1>停止</h1>
   <pre class="code">
-dbms_scheduler.stop_job('&lt;JOB_NAME, SYS.DEFAULT_JOB_CLASS>');</pre>
+    <code>
+dbms_scheduler.stop_job('&lt;job_name, sys.default_job_class>');
+    </code>
+  </pre>
 
   <h1>禁/启用</h1>
   <pre class="code">
-dbms_scheduler.disable([name=>]&lt;JOB_NAME>);
-dbms_scheduler.enable([name=>]&lt;JOB_NAME>);</pre>
+    <code>
+dbms_scheduler.disable([name=>]&lt;job_name>);
+dbms_scheduler.enable([name=>]&lt;job_name>);
+    </code>
+  </pre>
   
   <h1>查询</h1>
   <pre class="code">
+    <code>
 select state, t.* from user_scheduler_jobs t;
-select * from user_scheduler_running_jobs;</pre>
+select * from user_scheduler_running_jobs;
+    </code>
+  </pre>
 </body>
 </html>
