--- a/WebContent/pages/object_materialized_view.html
+++ b/WebContent/pages/object_materialized_view.html
@@ -7,6 +7,8 @@
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
+<link type="text/css" rel="stylesheet" href="../css/tree.css" />
+<link type="text/css" rel="stylesheet" href="../css/highlight.css" />
 
 <script type="text/javascript" src="../js/title.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
@@ -15,41 +17,58 @@
 <body>
   <h1>创建</h1>
   <pre class="code">
-CREATE MATERIALIZED VIEW &lt;MV_NAME>
-  TABLESPACE &lt;TS_NAME>
-  BUILD DEFERRED
-  REFRESH FORCE ON DEMAND
-  AS
-  &lt;SELECT STATEMENT>;</pre>
+    <code>
+create materialized view &lt;mv_name>
+  tablespace &lt;ts_name>
+  build deferred
+  refresh force on demand
+  as
+  &lt;select statement>;
+    </code>
+  </pre>
 
   <h1>重编译</h1>
   <pre class="code">
-alter materialized view &lt;MV_NAME> compile;</pre>
+    <code>
+alter materialized view &lt;mv_name> compile;
+    </code>
+  </pre>
 
   <h1>刷新</h1>
   <pre class="code">
-dbms_mview.refresh(&lt;MV_NAME>);</pre>
+    <code>
+dbms_mview.refresh(&lt;mv_name>);
+    </code>
+  </pre>
 
   <h1>添加日志</h1>
   <pre class="code">
-create materialized view log on &lt;TABLE_NAME>  
-  tablespace &lt;TABLESPACE_NAME>   
+    <code>
+create materialized view log on &lt;table_name>  
+  tablespace &lt;tablespace_name>   
   with rowid; 
-</pre>
+    </code>
+  </pre>
 
   <h1>删除日志</h1>
   <pre class="code">
-drop materialized view log on &lt;TABLE_NAME>;</pre>
+    <code>
+drop materialized view log on &lt;table_name>;
+    </code>
+  </pre>
 
   <h1>能力</h1>
   <p>Oracle 的 admin 目录下有文件 <a href="../files/utlxmv.sql" target="_blank">utlxmv.sql</a>，
   用以创建记录物化视图能力的 mv_capabilities_table 表。</p>
   <p>通过执行 DBMS_MVIEW.EXPLAIN_MVIEW 存储过程，就可以在 mv_capabilities_table 表中看到结果。</p>
   <pre class="code">
+    <code>
 declare 
 begin
-  DBMS_MVIEW.EXPLAIN_MVIEW(MV, [stmt_id]);
+  dbms_mview.explain_mview(mv, [stmt_id]);
   commit;
-end;</pre>
+end;
+    </code>
+  </pre>
 </body>
 </html>
