--- a/WebContent/pages/object_role.html
+++ b/WebContent/pages/object_role.html
@@ -7,6 +7,8 @@
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
+<link type="text/css" rel="stylesheet" href="../css/tree.css" />
+<link type="text/css" rel="stylesheet" href="../css/highlight.css" />
 
 <script type="text/javascript" src="../js/title.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
@@ -15,28 +17,43 @@
 <body>
   <h1>创建</h1>
   <pre class="code">
-CREATE role rolename
-  [NOT IDENTIFIED|IDENTIFIED BY password|EXTERNALLY|];</pre>
+    <code>
+create role rolename
+  [not identified|identified by password|externally|];
+    </code>
+  </pre>
 
   <h1>修改</h1>
   <pre class="code">
+    <code>
 alter role rolename
-  [NOT IDENTIFIED|IDENTIFIED BY password|EXTERNALLY|];</pre>
+  [not identified|identified by password|externally|];
+    </code>
+  </pre>
 
   <h1>删除</h1>
   <pre class="code">
-drop role rolename;</pre>
+    <code>
+drop role rolename;
+    </code>
+  </pre>
 
   <h1>查询</h1>
   <pre class="code">
-SELECT * FROM DBA_ROLES; 
-SELECT * FROM DBA_ROLE_PRIVS; 
-SELECT * FROM USER_ROLE_PRIVS;</pre>
+    <code>
+select * from dba_roles; 
+select * from dba_role_privs; 
+select * from user_role_privs;
+    </code>
+  </pre>
 
   <h1>赋予</h1>
   <pre class="code">
+    <code>
 grant role_name to user_name [with admin option];
-grant role_name to other_role_name [with admin option];</pre>
+grant role_name to other_role_name [with admin option];
+    </code>
+  </pre>
   
 </body>
 </html>
