--- a/WebContent/pages/subject_program.html
+++ b/WebContent/pages/subject_program.html
@@ -28,9 +28,12 @@
   </ul>
   <p class="next">定义记录类型</p>
   <pre class="code">
-type RECORD_NAME is record (
-  FIELD_DECLARATION, 
-  ... );</pre>
+    <code>
+type record_name is record (
+  field_declaration, 
+  ... );
+    </code>
+  </pre>
   
   <h2>语句块</h2>
   <p>条件是可以取值为 true、false 或 null 的表达式。如果条件取值为 null，将产生异常。</p>
