--- a/WebContent/pages/object_tablespace.html
+++ b/WebContent/pages/object_tablespace.html
@@ -57,6 +57,7 @@ drop tablespace &lt;tablespace_name> including contents and datafiles;
 --修改默认表空间
 alter [user &lt;user_name>|database] default tablespace &lt;tablespace_name>;
 alter [user &lt;user_name>|database] default temporary tablespace &lt;tablespace_name>;
+alter system set undo_tablespace='';
 
 --修改表空间名称
 alter tablespace &lt;tablespace_name> rename to &lt;new_tablespace_name>;
@@ -64,13 +65,11 @@ alter tablespace &lt;tablespace_name> rename to &lt;new_tablespace_name>;
 --修改表空间数据文件配置
 alter database datafile &lt;datafile_path>
   autoextend on next &lt;next_size> maxsize [&lt;max_size> | unlimited];
-  
---修改表空间数据文件大小
-alter datafile &lt;file_path> resize &lt;size>;
+alter database datafile &lt;file_path> resize &lt;size>;
 alter database tempfile &lt;tempfile_path> resize &lt;size>;
   
---增加表空间对应的数据文件
-alter tablespace &lt;tablespace_name> add datafile &lt;file_path> size &lt;size>
+--修改表空间对应的数据文件
+alter tablespace &lt;tablespace_name> add|drop datafile &lt;file_path> size &lt;size>
   autoextend on next &lt;extend_size>;
 
 alter tablespace &lt;tablespace_name> [online | offline];
@@ -84,6 +83,7 @@ alter tablespace &lt;tablespace_name> [read only | write];
     <code>
 --查询默认表空间
 select username, default_tablespace from dba_users;
+show parameter undo;
 
 --查询个表空间文件信息
 select file_name, tablespace_name, bytes from dba_data_files;
